# iole

./: .gitignore  CITATION.cff  README.md  demo.ipynb  main.py  main_localisation.py  main_sensitivity_CMD.py  pyproject.toml  testing.py
_src/model/: network_container.py  network_simulation.py
_src/util/: __init__.py
data/scenario_configurations/: 0_weighted_sensor_distribution_scenarios.json  all_sensor_scenarios_0_weighted.json  dummy_pipes_sensor_distribution_scenarios.json
data/sensitivity_analysis_json/: options.json  options_no_repl.json  rng_pattern_options_test.json  rng_pattern_senset_test.json  rng_pattern_senset_test2.json  sensitivity_setup.json  sensitivity_setup_2.json  sensitivity_setup_30_sensors.json  sensitivity_setup_demo_data.json  sensitivity_setup_short.json
data/sensitivity_analysis_json/sparse/: sensitiviy_setup_sparse_0_samples_399.json  sensitiviy_setup_sparse_1_samples_252.json  sensitiviy_setup_sparse_2_samples_924.json  sensitiviy_setup_sparse_3_samples_1344.json
src/: __init__.py  api.py  dual_model_real_time.py  sensitivity_analysis.py  sensitivity_analysis_result_merger.py
src/model/: __init__.py  configuration.py  network_container.py  network_simulation.py  perturbation.py
src/model/localisation/: __init__.py
src/util/: __init__.py
src/util/data_processing/: main.py
src/util/evaluation/: __init__.py  main.py
src/util/leakage_generation/: LeakageGenerator.py  __init__.py
src/util/oopnet_patch/: main.py
src/util/sensor_placement/: main.py
src/util/simulation_environment/: main.py
(+4 files in other folders)
