[project]
name = "iole-dualmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "epyt>=2.3.5.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "more-itertools>=11.1.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "oopnet>=0.6.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
